fixed MoveDone ordering in MCMC; still big memory leak somewhere..

--- a/params_generic.ini
+++ b/params_generic.ini
@@ -29,8 +29,9 @@ param2 = 0 -20 20 1 1
 samples = 100000
 
 #Use vanilla MCMC here since no speed hierarchy defined
-sampling_method = 1
-use_fast_slow = F
+sampling_method = 7
+use_fast_slow = T
+fast_param_index=2
 
 estimate_propose_matrix = F
 delta_loglike = 2
