--- a/batch2/lowl.ini
+++ b/batch2/lowl.ini
@@ -1,5 +1,6 @@
 #clik likelihood file, when compiling with cliklike
-
+use_CMB = T
+use_clik = T
 clik_data_commander = %DATASETDIR%clik/commander_v4.1_lm49.clik
 clik_speed_commander = 0
 
