--- a/batch2/nonclik_pol.ini
+++ b/batch2/nonclik_pol.ini
@@ -1,4 +1,8 @@
 use_CAMpol=T
+use_CMB = T
+
+clik_speed_camspec = 5
+lmax_computed_cl = 2500
 
 pollikefile = %DATASETDIR%camspec/like_7.5Fpol.dat
 
