--- a/source/Makefile
+++ b/source/Makefile
@@ -17,10 +17,13 @@ MODOUT = -module $(OUTPUT_DIR)
 LAPACKL =
 else
 #gfortran does not yet work yet, open GCC 4.9 compiler bugs are
+#http://gcc.gnu.org/bugzilla/show_bug.cgi?id=60414
 #http://gcc.gnu.org/bugzilla/show_bug.cgi?id=60334
 #http://gcc.gnu.org/bugzilla/show_bug.cgi?id=60289
 #http://gcc.gnu.org/bugzilla/show_bug.cgi?id=60255
 #http://gcc.gnu.org/bugzilla/show_bug.cgi?id=51976
+#and preferably
+#http://gcc.gnu.org/bugzilla/show_bug.cgi?id=44672
 F90C = gfortran
 MPIF90C = mpif90
 FFLAGS = -cpp -O3 -ffast-math
