CMB structures updated: variable lmax and number of cl, lmin_computed_cl, use_CMB and use_lensing_potential set automatically from used likelihoods, WMAP .ini config syntax changed, CosmoSettings type, refactors...

--- a/test.ini
+++ b/test.ini
@@ -37,6 +37,8 @@ root_dir = chains/
 
 #Root name for files produced
 file_root=test
+#action= 0 runs chains, 1 importance samples, 2 minimizes
+#use action=4 just to quickly test likelihoods
 action = 0
 
 #these are just small speedups for testing
