--- a/batch2/lensing.ini
+++ b/batch2/lensing.ini
@@ -1,9 +1,8 @@
 
-clik_data_lensing = %DATASETDIR%clik/lensing_likelihood_v4_ref.clik_lensing
+clik_data_lensing = %DATASETDIR%clik/g60_qecl_pp.dat
 clik_speed_lensing = -1
 
 use_nonlinear_lensing = T
-use_lensing_potential = T
 
 #currently non-linear lensing does not correctly go from transfer functions
 #this should ensure transfer functions are re-computed whenever the power spectrum parameters change 
