--- a/test.ini
+++ b/test.ini
@@ -2,6 +2,8 @@ DEFAULT(batch1/CAMspec_defaults.ini)
 DEFAULT(batch1/lowLike.ini)
 DEFAULT(batch1/lowl.ini)
 
+cmb_dataset[BICEP1]=data/BICEP/BICEP2.dataset
+
 #planck lensing
 #DEFAULT(batch1/lensing.ini)
 
@@ -39,7 +41,7 @@ root_dir = chains/
 file_root=test
 #action= 0 runs chains, 1 importance samples, 2 minimizes
 #use action=4 just to quickly test likelihoods
-action = 0
+action = 4
 
 #these are just small speedups for testing
 get_sigma8=F
