added use_min, use_max options for selecting bin ranges in CMB .dataset files

--- a/test.ini
+++ b/test.ini
@@ -3,6 +3,8 @@ DEFAULT(batch1/lowLike.ini)
 DEFAULT(batch1/lowl.ini)
 
 cmb_dataset[BICEP2]=data/BICEP/BICEP2.dataset
+#for r>0 also need this:
+compute_tensors = T
 
 #planck lensing
 #DEFAULT(batch1/lensing.ini)
