--- a/test.ini
+++ b/test.ini
@@ -51,3 +51,10 @@ get_sigma8=F
 #Uncomment this if you don't want one 0.06eV neutrino by default
 #num_massive_neutrinos=3
 #param[mnu] = 0 0 0 0 0
+
+
+#for PICO use e.g.
+#pico_datafile = pico3_tailmonty_v32.dat
+#cosmology_calculator=PICO
+
+
