--- a/batch1/common_batch1.ini
+++ b/batch1/common_batch1.ini
@@ -72,8 +72,10 @@ MPI_Max_R_ProposeUpdate = 3
 #As above, but used if varying new parameters that were fixed in covmat
 MPI_Max_R_ProposeUpdateNew = 50
 
-#Initial power spectrum amplitude point (Mpc^{-1})
+#Initial power spectrum amplitude pivots (Mpc^{-1})
+#if tensor_pivot_k/=pivot_k then r is defined so to that P_t(tensor_pivot_k)=r P_s(tensor_pivot_k)
 pivot_k = 0.05
+tensor_pivot_k = 0.05
 
 #Whether the CMB should be lensed (slows a lot unless also computing matter power)
 CMB_lensing = T
