--- a/batch1/common_batch1.ini
+++ b/batch1/common_batch1.ini
@@ -75,7 +75,8 @@ MPI_Max_R_ProposeUpdateNew = 50
 #Initial power spectrum amplitude pivots (Mpc^{-1})
 #if tensor_pivot_k/=pivot_k then r is defined so to that P_t(tensor_pivot_k)=r P_s(tensor_pivot_k)
 pivot_k = 0.05
-tensor_pivot_k = 0.05
+#tensor_pivot_k defaults to same as pivot_k
+#tensor_pivot_k = 0.05
 
 #Whether the CMB should be lensed (slows a lot unless also computing matter power)
 CMB_lensing = T
