--- a/test.ini
+++ b/test.ini
@@ -1,4 +1,4 @@
-DEFAULT(batch1/CAMspec_defaults.ini)
+pico_DEFAULT(batch1/CAMspec_defaults.ini)
 DEFAULT(batch1/lowLike.ini)
 DEFAULT(batch1/lowl.ini)
 
@@ -53,8 +53,9 @@ get_sigma8=F
 #param[mnu] = 0 0 0 0 0
 
 
-#for PICO use e.g.
-#pico_datafile = pico3_tailmonty_v32.dat
+#for PICO install from https://pypi.python.org/pypi/pypico and download data file
 #cosmology_calculator=PICO
+#pico_datafile = pico3_tailmonty_v32.dat
+#pico_verbose=T
 
 
