--- a/batch2/params_CMB_defaults.ini
+++ b/batch2/params_CMB_defaults.ini
@@ -29,8 +29,8 @@ param[nrunrun] = 0
 param[r] = 0
 
 param[wa] = 0
-param[nnu] = 3.046 3.046 3.046 0 0
-param[yhe] = 0.24 0.24 0.24 0 0
+param[nnu] = 3.046
+param[yhe] = 0.24
 
 param[alpha1] = 0
 param[deltazrei] = 0.5
