add gaussian wiggle parameters to temp_like for testing

--- a/batch2/nonclik.ini
+++ b/batch2/nonclik.ini
@@ -28,6 +28,11 @@ param[cibrun]= 0
 #set equal to ncib if ncib143<-9
 param[ncib143] = -10
 
+param[wig1_143] = 0
+param[wig1_217] = 0
+param[wig2_143] = 0
+param[wig2_217] = 0
+
 param[bm_1_2]=0
 param[bm_1_3]=0
 param[bm_1_4]=0
