add wiggle correlation parameters

--- a/batch2/nonclik.ini
+++ b/batch2/nonclik.ini
@@ -30,8 +30,10 @@ param[ncib143] = -10
 
 param[wig1_143] = 0
 param[wig1_217] = 0
+param[wig1_r] = 0
 param[wig2_143] = 0
 param[wig2_217] = 0
+param[wig2_r] = 0
 
 param[bm_1_2]=0
 param[bm_1_3]=0
