--- a/batch2/nonclik.ini
+++ b/batch2/nonclik.ini
@@ -6,7 +6,7 @@ camspec_beam_mcmc_num=1
 #beamfile = %DATASETDIR%camspec/beamfile_v6.5F.dat
 
 pre_marged=F
-likefile = %DATASETDIR%camspec/like_v6.5FCdust
+likefile = %DATASETDIR%camspec/like_v6.5Fdust
 beamfile = %DATASETDIR%camspec/beamfile_v6.5F.dat
 camspec_fiducial_cl=%DATASETDIR%/base_v65F_lowl_lowLike_highL.bestfit_cl
 camspec_fiducial_foregrounds=%DATASETDIR%/base_v65F_lowl_lowLike_highL.camspec_foregrounds
