make center and width mcmc parameters

--- a/batch2/nonclik.ini
+++ b/batch2/nonclik.ini
@@ -31,9 +31,13 @@ param[ncib143] = -10
 param[wig1_143] = 0
 param[wig1_217] = 0
 param[wig1_r] = 0
+param[wig1_L] = 1460
+param[wig1_sigma] = 30
 param[wig2_143] = 0
 param[wig2_217] = 0
 param[wig2_r] = 0
+param[wig2_L] = 1810
+param[wig2_sigma] = 30
 
 param[bm_1_2]=0
 param[bm_1_3]=0
