--- a/test.ini
+++ b/test.ini
@@ -1,4 +1,4 @@
-pico_DEFAULT(batch1/CAMspec_defaults.ini)
+DEFAULT(batch1/CAMspec_defaults.ini)
 DEFAULT(batch1/lowLike.ini)
 DEFAULT(batch1/lowl.ini)
 
@@ -55,7 +55,7 @@ get_sigma8=F
 
 #for PICO install from https://pypi.python.org/pypi/pypico and download data file
 #cosmology_calculator=PICO
-#pico_datafile = pico3_tailmonty_v32.dat
+#pico_datafile = pico3_tailmonty_v33.dat
 #pico_verbose=T
 
 
