--- a/test.ini
+++ b/test.ini
@@ -25,6 +25,16 @@ MPI_Max_R_ProposeUpdate = 30
 
 propose_matrix= planck_covmats/base_planck_lowl_lowLike.covmat
 
+#Folder where files (chains, checkpoints, etc.) are stored
+root_dir = chains/
+
+#Root name for files produced
+file_root=test
+#action= 0 runs chains, 1 importance samples, 2 minimizes
+#use action=4 just to quickly test likelihoods
+action = 4
+
+
 start_at_bestfit =F
 feedback=1
 use_fast_slow = T
@@ -34,16 +44,8 @@ sampling_method = 7
 dragging_steps  = 3
 propose_scale = 2
 
+#Set >0 to make data files for importance sampling
 indep_sample=0
-
-#Folder where files (chains, checkpoints, etc.) are stored
-root_dir = chains/
-
-#Root name for files produced
-file_root=test
-#action= 0 runs chains, 1 importance samples, 2 minimizes
-#use action=4 just to quickly test likelihoods
-action = 4
 
 #these are just small speedups for testing
 get_sigma8=F
@@ -55,7 +57,7 @@ get_sigma8=F
 
 #for PICO install from https://pypi.python.org/pypi/pypico and download data file
 #cosmology_calculator=PICO
-#pico_datafile = pico3_tailmonty_v33.dat
-#pico_verbose=T
+#pico_datafile = pico3_tailmonty_v34.dat
+#pico_verbose=F
 
 
