--- a/test.ini
+++ b/test.ini
@@ -10,7 +10,7 @@ compute_tensors = T
 #DEFAULT(batch1/lensing.ini)
 
 #Other Likelihoods
-DEFAULT(batch1/BAO.ini)
+DEFAULT(batch1/BAODR11.ini)
 #DEFAULT(batch1/HST.ini)
 #DEFAULT(batch1/Union.ini)
 #DEFAULT(batch1/SNLS.ini)
@@ -34,6 +34,8 @@ file_root=test
 #use action=4 just to quickly test likelihoods
 action = 4
 
+#if you want to get theory cl for test point
+#test_output_root = output_cl_root
 
 start_at_bestfit =F
 feedback=1
