allow chain_num=-1 for all chains; ranges for chi2 params

--- a/batch1/getdist_common.ini
+++ b/batch1/getdist_common.ini
@@ -128,6 +128,13 @@ limits[r10] = 0 N
 limits[r02] = 0 N
 limits[omeganuh2]=0 N
 limits[omegam]=0 N
+limits[rBB] = 0 N
+limits[AT] = 0 N
+limits[ctlamp] = 0 N
+limits[BAO]=0 N
+limits[HST]=0 N
+limits[DR11LOWZ]=0 N
+
 
 #all_limits sets all limitsxx for all variables to the same; can be useful for bins
 all_limits = 
