--- a/distparams.ini
+++ b/distparams.ini
@@ -8,8 +8,8 @@ out_root =
 out_dir = 
 plot_data_dir = plot_data/
 
-#If 0 assume 1 and no chain filename prefixes
-chain_num = 8
+#If 0 assume 1 and no chain filename prefixes; if -1 read as many as exist
+chain_num = -1
 first_chain = 
 exclude_chain = 
 
