--- a/batch2/pico.ini
+++ b/batch2/pico.ini
@@ -13,3 +13,8 @@ use_fast_slow = T
 #optimal setting may depend on openmp settings
 oversample_fast=4
 
+get_sigma8=F
+param[mnu]=0
+
+indep_sample = 50
+checkpoint =F
