--- a/batch2/lensing.ini
+++ b/batch2/lensing.ini
@@ -1,5 +1,7 @@
 
-clik_data_lensing = %DATASETDIR%clik/g60_qecl_pp.dat
+#clik_data_lensing = %DATASETDIR%clik/g60_qecl_pp.dat
+clik_data_lensing = %DATASETDIR%clik/g86_qecl_pp_norenorm
+
 clik_speed_lensing = -1
 
 use_nonlinear_lensing = T
