--- a/source/Makefile
+++ b/source/Makefile
@@ -45,9 +45,13 @@ PRECISION ?=
 #set WMAP empty not to compile with WMAP, e.g. WMAP = /scratch/../WMAP9/likelihood_v5
 WMAP ?=
 
-#set PICO directory to build with pico support, e.g. PICO= ../../../pypico/pypico
-#should be able to get $(PICO)/fpico_interface.f90
+#set PICO=YES to build with pico support, or set path to PICO manually
+#e.g. PICO=/path/to/pypico
 PICO ?=
+ifeq ($(PICO),YES)
+PICO = $(shell python -c "import pypico; print pypico.get_folder()")
+endif
+
 
 #Needed for WMAP; set from ~/.bashrc definition or edit here
 cfitsio ?=
