--- a/batch2/params_CMB_defaults.ini
+++ b/batch2/params_CMB_defaults.ini
@@ -13,6 +13,10 @@ bbn_consistency=T
 H0_min=20
 H0_max=100
 
+
+#to vary parameters set param[name]= center, min, max, start width, propose width
+#for fixed can just fix fixed value
+
 param[omegabh2] = 0.0221 0.005 0.1 0.0001 0.0002
 param[omegach2] = 0.12 0.001 0.99 0.001 0.002
 param[theta] = 1.0411 0.5 10 0.0004 0.0004
