--- a/batch2/lensing.ini
+++ b/batch2/lensing.ini
@@ -1,6 +1,6 @@
 
 #clik_data_lensing = %DATASETDIR%clik/g60_qecl_pp.dat
-clik_data_lensing = %DATASETDIR%clik/g86_qecl_pp_norenorm
+clik_data_lensing = %DATASETDIR%clik/g60_full_pp_norenorm.clik
 
 clik_speed_lensing = -1
 
