update clik campsec for 6.5f

--- a/batch2/CAMspec_defaults.ini
+++ b/batch2/CAMspec_defaults.ini
@@ -1,7 +1,7 @@
 use_clik = T
 
 #clik likelihood file, when compiling with cliklike
-clik_data_camspec = %DATASETDIR%clik/CAMspec_v6.2TN_2013_02_26_dist.clik
+clik_data_camspec = %DATASETDIR%clik/CAMspec_v6.5F_2013_10_24_dist.clik
 
 clik_params_camspec = %DATASETDIR%camspec.paramnames
 clik_speed_camspec = 5
