--- a/batch2/BAO.ini
+++ b/batch2/BAO.ini
@@ -1,10 +1,4 @@
-use_BAO=T
-redo_no_new_data=T
-redo_add=T
-redo_likeoffset = 0
-
 #filenames for BAO data sets
+DEFAULT(BAODR11.ini)
 bao_numdatasets = 3
-bao_dataset1 = data/sdss_DR9_bao.dataset
-bao_dataset2 = data/sdss_DR7_bao.dataset
-bao_dataset3 = data/sdss_6DF_bao.dataset
+bao_dataset3 = data/wigglez_bao.dataset
