fix nonclick.ini -> nonclik.ini

--- a/test.ini
+++ b/test.ini
@@ -1,4 +1,4 @@
-DEFAULT(batch2/nonclick.ini)
+DEFAULT(batch2/nonclik.ini)
 DEFAULT(batch2/CAMspec_defaults.ini)
 DEFAULT(batch2/lowl.ini)
 DEFAULT(batch2/lowLike.ini)
