--- a/test.ini
+++ b/test.ini
@@ -1,9 +1,9 @@
-DEFAULT(batch2/nonclick.ini)
+DEFAULT(batch2/nonclik.ini)
 DEFAULT(batch2/CAMspec_defaults.ini)
 DEFAULT(batch2/lowl.ini)
 DEFAULT(batch2/lowLike.ini)
 
-cmb_dataset[BICEP2]=data/BICEP/BICEP2.dataset
+#cmb_dataset[BICEP2]=data/BICEP/BICEP2.dataset
 #for r>0 also need this:
 compute_tensors = T
 
@@ -17,6 +17,7 @@ compute_tensors = T
 #DEFAULT(batch2/SNLS.ini)
 #DEFAULT(batch2/WiggleZ_MPK.ini)
 #DEFAULT(batch2/MPK.ini)
+DEFAULT(batch2/BAO_RSD.ini)
 
 #general settings
 DEFAULT(batch2/common.ini)
@@ -33,7 +34,9 @@ root_dir = chains/
 file_root=test
 #action= 0 runs chains, 1 importance samples, 2 minimizes
 #use action=4 just to quickly test likelihoods
-action = 4
+action = 0
+
+checkpoint = F
 
 #if you want to get theory cl for test point
 #test_output_root = output_cl_root
