Apparently working v96F TT+TE+EE likelihood.

--- a/batch2/nonclik_v96F.ini
+++ b/batch2/nonclik_v96F.ini
@@ -1,6 +1,8 @@
 
 
 pre_marged=T
+margelikefile = %DATASETDIR%camspec/like_v9.6F_unified.dat
+
 likefile = %DATASETDIR%camspec/like_v9.6F_unified.dat
 beamfile = %DATASETDIR%camspec/beamfile_v6.5F.dat
 
