added Alensf for scaling fixed fiducial spectrum; output of rms deflection derived parameter

--- a/batch2/params_CMB_defaults.ini
+++ b/batch2/params_CMB_defaults.ini
@@ -39,6 +39,7 @@ param[yhe] = 0.24
 param[alpha1] = 0
 param[deltazrei] = 0.5
 param[Alens] = 1
+param[Alensf]=-1
 param[fdm] = 0
 
 param[ns] = 0.96 0.8 1.2 0.004 0.004
