update nonclik datafile name, set calTE,calEE=1 by default

--- a/batch2/nonclik_v96F.ini
+++ b/batch2/nonclik_v96F.ini
@@ -1,9 +1,11 @@
 
 
 pre_marged=T
-margelikefile = %DATASETDIR%camspec/like_v9.6F_unified.dat
 
-likefile = %DATASETDIR%camspec/like_v9.6F_unified.dat
+margelikefile = %DATASETDIR%camspec/like_v9.6F_unified_18062014.dat
+
+likefile = %DATASETDIR%camspec/like_v9.6F_unified_18062014.dat
+
 beamfile = %DATASETDIR%camspec/beamfile_v6.5F.dat
 
 clik_data_camspec =
