--- a/batch2/nonclik.ini
+++ b/batch2/nonclik.ini
@@ -21,8 +21,11 @@ prior[ncib] = 0.7 0.2
 
 prior[cal0]= 1.0006 0.0004
 prior[cal2]= 0.9966 0.0015
-
 param[cal1]= 1
+
+param[calTE]=1
+param[calEE]=1
+
 param[cibrun]= 0
 
 #set equal to ncib if ncib143<-9
@@ -38,6 +41,7 @@ param[wig2_217] = 0
 param[wig2_r] = 0
 param[wig2_L] = 1810
 param[wig2_sigma] = 30
+
 
 param[bm_1_2]=0
 param[bm_1_3]=0
