--- a/batch2/nonclik_v96F.ini
+++ b/batch2/nonclik_v96F.ini
@@ -1,6 +1,6 @@
 
 
-pre_marged=T
+pre_marged=F
 
 margelikefile = %DATASETDIR%camspec/like_v9.6F_unified_18062014.dat
 
@@ -14,7 +14,6 @@ prior[cal0]= 0.9997 0.0008
 prior[cal2]= 0.992 0.004
 
 camspec_beam_mcmc_num=1
-
-param[bm_1_1] = 0
+#param[bm_1_1] = 0
 
 DEFAULT(nonclik.ini)
