pico settings now with standard mnu and less fast oversamplin

--- a/batch2/pico.ini
+++ b/batch2/pico.ini
@@ -9,12 +9,12 @@ pico_verbose=F
 #then fast Planck parameter changes only require calls to Planck likelihood
 sampling_method = 1
 use_fast_slow = T
-#also Planck nuisance parameters more non-Gaussian, so can be harder to converge, hence want to sample more often
+#also Planck nuisance parameters more non-Gaussian, so can be harder to converge, and lowl likelihood may be slowish,
+#hence want to sample fast more often 
 #optimal setting may depend on openmp settings
-oversample_fast=4
+oversample_fast=3
 
 get_sigma8=F
-param[mnu]=0
 
-indep_sample = 50
+indep_sample = 0
 checkpoint =F
