--- a/batch2/nonclik_v96F.ini
+++ b/batch2/nonclik_v96F.ini
@@ -13,6 +13,12 @@ clik_data_camspec =
 prior[cal0]= 0.9997 0.0008
 prior[cal2]= 0.992 0.004
 
+param[calTE] = 1 0.1 2 0.005 0.005
+param[calEE] = 1 0.1 2 0.01 0.01
+
+prior[calTT]= 1 .01
+prior[calTE]= 1 .01
+
 camspec_beam_mcmc_num=1
 #param[bm_1_1] = 0
 
