--- a/source/Makefile
+++ b/source/Makefile
@@ -4,12 +4,16 @@ OUTPUT_DIR ?= Release
 BUILD ?= MPI
 #set BUILD to MPI to force MPI, should be set in ../Makefile
 
+MPIF90C ?= mpif90
+
 ifortErr = $(shell which ifort >/dev/null; echo $$?)
 
 #these settings for ifort 14 and higher
 ifeq "$(ifortErr)" "0"
 #ifort; Can remove -xHost if your cluster is not uniform, or specify specific processor optimizations -x...
 F90C     = ifort
+#use this if mpif90 is trying to use gfortran: MPIF90C = mpif90 -f90=ifort
+
 FFLAGS = -mkl -openmp -O3 -no-prec-div -fpp
 DEBUGFLAGS = -mkl -openmp -g -check all -check noarg_temp_created -traceback -no-prec-div -fpp
 #add -fpe0 to check for floating point errors (think lowLike also throws these harmlessly)
@@ -42,8 +46,6 @@ MODOUT =  -J$(OUTPUT_DIR)
 #commented above is (I think) for Mac; this is standard linux (sudo apt-get install liblapack-dev)
 LAPACKL = -lblas -llapack
 endif
-
-MPIF90C := mpif90 -f90=$(F90C)
 
 #use "make RECOMBINATION=cosmorec" to build with CosmoRec rather than RECFAST default
 RECOMBINATION ?=recfast
@@ -82,19 +84,6 @@ INCLUDE =
 ifeq ($(PLANCKLIKE),cliklike)
 CLIKL = -L$(CLIKPATH)/lib -lclik_f90
 INCLUDE = $(IFLAG)$(CLIKPATH)/include
-endif
-
-
-#COSMOS: use "module load cosmolib latest"
-#use "runCosmomc" (globally installed) to run, defining required memory usage
-ifeq ($(COSMOHOST),cosmos)
-F90C = ifort
-FFLAGS = -openmp -fast -w -fpp2
-LINKMPI = -lmpi
-LAPACKL = -mkl=sequential -lmkl_lapack
-cfitsio = $(CFITSIO)
-WMAP = $(COSMOLIB)/WMAP9
-GSLPATH = $(GSL_ROOT)
 endif
 
 ifeq ($(OUTPUT_DIR),Debug)
