--- a/batch2/nonclik_v97F.ini
+++ b/batch2/nonclik_v97F.ini
@@ -4,7 +4,7 @@ pre_marged=F
 
 margelikefile = %DATASETDIR%camspec/like_v9.7F_unified.dat
 
-likefile = %DATASETDIR%camspec/like_v9.7F.dat
+likefile = %DATASETDIR%camspec/like_v9.7F_unified.dat
 
 beamfile = %DATASETDIR%camspec/beamfile_v6.5F.dat
 
