--- a/batch2/nonclik_v97F.ini
+++ b/batch2/nonclik_v97F.ini
@@ -13,8 +13,8 @@ clik_data_camspec =
 prior[cal0]= 0.9997 0.0008
 prior[cal2]= 0.992 0.004
 
-param[calTE] = 1 0.1 2 0.005 0.005
-param[calEE] = 1 0.1 2 0.01 0.01
+param[calTE] = 1
+param[calEE] = 1
 
 prior[calTT]= 1 .01
 prior[calTE]= 1 .01
