--- a/distparams.ini
+++ b/distparams.ini
@@ -3,10 +3,10 @@
 #if zero, columnnum calculated automatically as total number of columns
 columnnum  = 0
 
-file_root = chains/test
+file_root = chains/Planck_RSD_r1
 out_root = 
-out_dir = 
-plot_data_dir = plot_data/
+out_dir = /home/adammoss/work/code/PLANCK/cosmomcplanck_output
+plot_data_dir = /home/adammoss/work/code/PLANCK/cosmomcplanck_output/plot_data/
 
 #If 0 assume 1 and no chain filename prefixes; if -1 read as many as exist
 chain_num = -1
@@ -97,7 +97,7 @@ num_3D_plots = 1
 3D_plot1 = H0 omegam tau
 
 #Output 2D plots for param combos with 1D marginalized plots along the diagonal
-triangle_plot = T
+triangle_plot = F
 triangle_params = omegabh2 omegach2 tau omegak mnu nnu yhe Alens ns nrun logA r H0 omegam omegal sigma8 r02
 
 #e.g. colormap('jet')
@@ -134,7 +134,7 @@ PCA_func   = LLL
 
 #if parameter_names empty set from file_root.paramnames if it exists
 #otherwise set up labels manually in this file using lab1=... etc.
-parameter_names = 
+parameter_names = chains/Planck_r1_1.paramnames
 #params_CMB.paramnames
 
 
