--- a/batch2/plik_dx11c_TE_v12.ini
+++ b/batch2/plik_dx11c_TE_v12.ini
@@ -7,7 +7,7 @@ clik_speed_plikTE = 5
 lmax_computed_cl = 2700
 
 
-propose_matrix = planck_covmats/plik_dx11c_TE_v12.clik
+propose_matrix = planck_covmats/plik_dx11c_TE_v12.covmat
                                        
 bbn_consistency=T
 
