added data/planck_lensing files

--- a/batch2/lensing.ini
+++ b/batch2/lensing.ini
@@ -1,8 +1,6 @@
 
-#clik_data_lensing = %DATASETDIR%clik/g60_qecl_pp.dat
-clik_data_lensing = %DATASETDIR%clik/g60_full_pp_norenorm.clik
-
-clik_speed_lensing = -1
+cmb_dataset[PLENS]=  %DATASETDIR%planck_lensing/g60_full_pp.dataset
+cmb_dataset_speed[PLENS] =-1
 
 use_nonlinear_lensing = T
 
