CFHTLENS 1 bin using P(k)

--- a/test.ini
+++ b/test.ini
@@ -3,9 +3,9 @@ DEFAULT(batch2/CAMspec_defaults.ini)
 DEFAULT(batch2/lowl.ini)
 DEFAULT(batch2/lowLike.ini)
 
-cmb_dataset[BICEP2]=data/BICEP/BICEP2.dataset
+#cmb_dataset[BICEP2]=data/BICEP/BICEP2.dataset
 #for r>0 also need this:
-compute_tensors = T
+#compute_tensors = T
 
 #planck lensing
 #DEFAULT(batch2/lensing.ini)
@@ -31,10 +31,10 @@ propose_matrix= planck_covmats/base_planck_lowl_lowLike.covmat
 root_dir = chains/
 
 #Root name for files produced
-file_root=test
+file_root=Planck_CFHTLENS1_r1
 #action= 0 runs chains, 1 importance samples, 2 minimizes
 #use action=4 just to quickly test likelihoods
-action = 4
+action = 0
 
 #if you want to get theory cl for test point
 #test_output_root = output_cl_root
