--- a/test.ini
+++ b/test.ini
@@ -31,7 +31,8 @@ propose_matrix= planck_covmats/base_planck_lowl_lowLike.covmat
 root_dir = chains/
 
 #Root name for files produced
-file_root=Planck_CFHTLENS6_r1
+file_root=test
+#Planck_CFHTLENS6_r1
 #action= 0 runs chains, 1 importance samples, 2 minimizes
 #use action=4 just to quickly test likelihoods
 action = 4
@@ -42,6 +43,8 @@ action = 4
 start_at_bestfit =F
 feedback=1
 use_fast_slow = T
+
+checkpoint = F
 
 #sampling_method=7 is a new fast-slow scheme good for Planck
 sampling_method = 7
@@ -64,5 +67,3 @@ get_sigma8=T
 #cosmology_calculator=PICO
 #pico_datafile = pico3_tailmonty_v34.dat
 #pico_verbose=F
-
-
