--- a/test.ini
+++ b/test.ini
@@ -31,11 +31,12 @@ propose_matrix= planck_covmats/base_planck_lowl_lowLike.covmat
 root_dir = chains/
 
 #Root name for files produced
-file_root=test
-#Planck_CFHTLENS6_r1
+file_root=Planck_CFHTLENS6_r1
 #action= 0 runs chains, 1 importance samples, 2 minimizes
 #use action=4 just to quickly test likelihoods
-action = 4
+action = 0
+
+num_threads = 4
 
 #if you want to get theory cl for test point
 #test_output_root = output_cl_root
