Increase max redshifts

--- a/test.ini
+++ b/test.ini
@@ -8,7 +8,7 @@ DEFAULT(batch2/lowLike.ini)
 #compute_tensors = T
 
 #planck lensing
-#DEFAULT(batch2/lensing.ini)
+DEFAULT(batch2/lensing.ini)
 
 #Other Likelihoods
 #DEFAULT(batch2/BAO.ini)
