--- a/batch2/WL.ini
+++ b/batch2/WL.ini
@@ -8,7 +8,7 @@ redo_add=T
 redo_likeoffset = 0
 
 #filenames for WL data sets
-wl_numdatasets = 2
-wl_dataset1 = data/CFHTLENS_1bin.dataset
-wl_dataset2 = data/CFHTLENS_6bin.dataset
+wl_numdatasets = 1
+#wl_dataset1 = data/CFHTLENS_1bin.dataset
+wl_dataset1 = data/CFHTLENS_6bin.dataset
 
