bicep off by default in .ini

--- a/test.ini
+++ b/test.ini
@@ -2,9 +2,10 @@ DEFAULT(batch1/CAMspec_defaults.ini)
 DEFAULT(batch1/lowLike.ini)
 DEFAULT(batch1/lowl.ini)
 
-cmb_dataset[BICEP2]=data/BICEP/BICEP2.dataset
-#for r>0 also need this:
-compute_tensors = T
+
+#cmb_dataset[BICEP2]=data/BICEP/BICEP2.dataset
+#for r>0 also need compute_tensors=T:
+compute_tensors = F
 
 #planck lensing
 #DEFAULT(batch1/lensing.ini)
