Change bao_type to 6 (5 is DR8), Samushia result

--- a/batch2/BAO_RSD.ini
+++ b/batch2/BAO_RSD.ini
@@ -8,6 +8,5 @@ max_z_bao = 1.0
 
 #filenames for BAO data sets
 bao_numdatasets = 1
-bao_dataset1 = data/sdss_DR11CMASS_RSD_bao.dataset
-# Am duplicating to test multiple RSD datasets
-bao_dataset2 = data/sdss_DR11CMASS_RSD_bao_duplicate.dataset
+bao_dataset1 = data/sdss_DR11CMASS_RSD_bao_Beutler.dataset
+#bao_dataset1 = data/sdss_DR11CMASS_RSD_bao_Samushia.dataset
