--- a/batch2/lowl.ini
+++ b/batch2/lowl.ini
@@ -1,6 +1,6 @@
 #clik likelihood file, when compiling with cliklike
 
 use_clik = T
-clik_data_commander = %DATASETDIR%clik/commander_v4.1_lm49.clik
-clik_speed_commander = 0
+clik_data_commanderTT = %DATASETDIR%clik/Commander_dr2_v0.1_l_2_to_49.clik
+clik_speed_commanderTT = 0
 
