add changes for CAMspec clik9 defaults

--- a/batch2/CAMspec_defaults.ini
+++ b/batch2/CAMspec_defaults.ini
@@ -1,10 +1,11 @@
 use_clik = T
 
 #clik likelihood file, when compiling with cliklike
-clik_data_camspec = %DATASETDIR%clik/CAMspec_v6.5F_2013_10_24_dist.clik
+clik_data_camspec = %DATASETDIR%clik/CAMspec_v9.7F_2014_07_09_TTTEEE.clik
 
-clik_params_camspec = %DATASETDIR%camspec.paramnames
+clik_params_camspec = %DATASETDIR%data/camspec_clik9.paramnames
 clik_speed_camspec = 5
+
 
 #this contains most of the standard parameters so can be used with various different runs (but in practice is often not invertible)
 #lots of full covmats are provided in planck_covmats
@@ -22,6 +23,7 @@ param[psr]= 0.91 0.0 1.0 0.04 0.04
 param[cibr]= 0.63 0.0 1.0 0.05 0.05
 param[ncib] = 0.6 -2 2 0.05 0.05
 param[cal0]= 1 0.95 1.05  0.0004 0.0004
+param[cal1]= 1
 param[cal2]= 1 0.95 1.05 0.001 0.001
 param[xi] = 0.1 0 1 .2 .2
 param[aksz] = 1 0 10 .7 0.7
@@ -31,3 +33,48 @@ param[aksz] = 1 0 10 .7 0.7
 
 param[bm_1_1] = 0 -10 10 0.3 0.3
 #other beams modes are marginalized analytically internally
+
+
+prior[ncib] = 0.7 0.2
+param[ncib143] = -10
+param[cibrun]= 0
+
+param[calTE] = 1 0 2 0.005 0.005
+param[calEE] = 1 0 2 0.005 0.005
+prior[calTE] = 1 0.01
+prior[calEE] = 1 0.01
+
+prior[cal0]= 1.0 0.001
+prior[cal2]= 0.991 0.003
+
+param[wig1_143] = 0
+param[wig1_217] = 0
+param[wig1_r] = 0
+param[wig1_L] = 1460
+param[wig1_sigma] = 30
+param[wig2_143] = 0
+param[wig2_217] = 0
+param[wig2_r] = 0
+param[wig2_L] = 1810
+param[wig2_sigma] = 30
+
+param[bm_1_2]=0
+param[bm_1_3]=0
+param[bm_1_4]=0
+param[bm_1_5]=0
+param[bm_2_1]=0
+param[bm_2_2]=0
+param[bm_2_3]=0
+param[bm_2_4]=0
+param[bm_2_5]=0
+param[bm_3_1]=0
+param[bm_3_2]=0
+param[bm_3_3]=0
+param[bm_3_4]=0
+param[bm_3_5]=0
+param[bm_4_1]=0
+param[bm_4_2]=0
+param[bm_4_3]=0
+param[bm_4_4]=0
+param[bm_4_5]=0
+
