--- a/test.ini
+++ b/test.ini
@@ -1,7 +1,7 @@
-DEFAULT(batch2/nonclik.ini)
+DEFAULT(batch2/nonclik_v97F.ini)
 DEFAULT(batch2/CAMspec_defaults.ini)
-DEFAULT(batch2/lowl.ini)
-DEFAULT(batch2/lowLike.ini)
+DEFAULT(batch2/lowTEB.ini)
+#DEFAULT(batch2/lowLike.ini)
 
 
 #cmb_dataset[BICEP2]=data/BICEP/BICEP2.dataset
