--- a/batch2/CAMspec_defaults.ini
+++ b/batch2/CAMspec_defaults.ini
@@ -3,7 +3,7 @@ use_clik = T
 #clik likelihood file, when compiling with cliklike
 clik_data_camspec = %DATASETDIR%clik/CAMspec_v9.7F_2014_07_09_TTTEEE.clik
 
-clik_params_camspec = %DATASETDIR%data/camspec_clik9.paramnames
+clik_params_camspec = %DATASETDIR%camspec_clik9.paramnames
 clik_speed_camspec = 5
 
 
