--- a/batch2/nonclik_v97F.ini
+++ b/batch2/nonclik_v97F.ini
@@ -10,16 +10,25 @@ beamfile = %DATASETDIR%camspec/beamfile_v6.5F.dat
 
 clik_data_camspec =
 
-prior[cal0]= 0.9997 0.0008
-prior[cal2]= 0.992 0.004
-
-param[calTE] = 1
-param[calEE] = 1
-
-prior[calTT]= 1 .01
-prior[calTE]= 1 .01
-
 camspec_beam_mcmc_num=1
-#param[bm_1_1] = 0
 
-DEFAULT(nonclik.ini)
+
+use_CAMspec=T
+camspec_beam_mcmc_num=1
+
+#pre_marged=T
+#margelikefile=%DATASETDIR%camspec/like_v6.5Fdust_beam_marged
+#beamfile = %DATASETDIR%camspec/beamfile_v6.5F.dat
+
+pre_marged=F
+
+camspec_fiducial_cl=%DATASETDIR%/base_v65F_lowl_lowLike_highL.bestfit_cl
+camspec_fiducial_foregrounds=%DATASETDIR%/base_v65F_lowl_lowLike_highL.camspec_foregrounds
+
+sz143file = %DATASETDIR%camspec/tsz_143_eps0.50.dat
+tszxcibfile = %DATASETDIR%camspec/sz_x_cib_template.dat
+kszfile = %DATASETDIR%camspec/cl_ksz_148_trac.dat
+
+
+
+
