test.ini uses clik

--- a/test.ini
+++ b/test.ini
@@ -1,4 +1,4 @@
-DEFAULT(batch2/nonclik_v97F.ini)
+#DEFAULT(batch2/nonclik_v97F.ini)
 DEFAULT(batch2/CAMspec_defaults.ini)
 DEFAULT(batch2/lowTEB.ini)
 #DEFAULT(batch2/lowLike.ini)
