added test CAMspec_TE.ini

--- a/batch2/CAMspec_TE.ini
+++ b/batch2/CAMspec_TE.ini
@@ -1,4 +1,4 @@
-DEFAULT(CAMspec_deafults.ini)
+DEFAULT(CAMspec_defaults.ini)
 clik_data_camspec = %DATASETDIR%clik/CAMspec_v9.7F_2014_07_09_TE.clik
 
 param[aps100] = 0
