added batch2/CAMspec_XX.ini for different combinations

--- a/batch2/CAMspec_TE.ini
+++ b/batch2/CAMspec_TE.ini
@@ -20,9 +20,9 @@ param[bm_1_1] = 0
 
 #should take this out if allow calTE to float in TE-only
 param[calTE] = 1
-
 param[calEE] = 1
-
+prior[calTE]=
+prior[calEE]=
 
 prior[cal0]= 
 prior[cal2]= 
