remove zre prior for now; grid update to include plik

--- a/batch2/params_CMB_defaults.ini
+++ b/batch2/params_CMB_defaults.ini
@@ -1,5 +1,6 @@
 #New for 2014
-use_min_zre = 6.5
+#no zre prior in chains, can do later by importance sampling
+use_min_zre = 0
 
 #CAMB parameters
 #If we are including tensors
