fix (no) zre prior for getdist; plot updates

--- a/batch2/getdist_common.ini
+++ b/batch2/getdist_common.ini
@@ -123,7 +123,8 @@ marker[nrun] = 0
 #Need to give limits if prior cuts off distribution where not very small
 #base parameter limits are set automatically from the ranges file
 limits[H0]=20 100
-limits[zrei] = 6.5 N
+#uncomment if have zre prior
+#limits[zrei] = 6.5 N
 limits[r10] = 0 N
 limits[r02] = 0 N
 limits[omeganuh2]=0 N
