add files and upgrade config for planck lensing only

--- a/batch2/lensonly.ini
+++ b/batch2/lensonly.ini
@@ -1,4 +1,7 @@
 
+cmb_dataset[PLENS]=  %DATASETDIR%planck_lensing/g60_full_pp_lensonly.dataset
+
+DEFAULT(lensing.ini)
 sampling_method = 1
 
 prior[omegabh2] = 0.022 0.002
