--- a/batch2/getdist_common.ini
+++ b/batch2/getdist_common.ini
@@ -109,7 +109,7 @@ make_scatter_samples=T
 
 #Output 2D plots for param combos with 1D marginalized plots along the diagonal
 triangle_plot = T
-triangle_params = omegabh2 omegach2 tau omegak mnu nnu yhe Alens ns nrun logA r H0 omegam omegal sigma8 r02
+triangle_params = theta omegabh2 omegach2 tau omegak mnu nnu yhe Alens ns nrun logA r H0 omegam omegal sigma8 r02
 
 #e.g. colormap('jet')
 matlab_colscheme =
