--- a/batch2/lensonly.ini
+++ b/batch2/lensonly.ini
@@ -5,6 +5,10 @@ DEFAULT(lensing.ini)
 sampling_method = 1
 
 prior[omegabh2] = 0.022 0.002
+
+#Pettini and Cooke: http://arxiv.org/abs/1205.3785
+#prior[omegabh2] = 0.0223 0.0009
+
 prior[ns] = 0.962 0.01
 
 param[tau] = 0.07
