change HST_high to GPE 73.9 value

--- a/batch2/HST_high.ini
+++ b/batch2/HST_high.ini
@@ -1,5 +1,6 @@
-Hubble_H0 = 74.3
-Hubble_H0_err = 2.1
-Hubble_name = H074p3
+#GPE eq18c, LMC+MW 
+Hubble_H0 = 73.9
+Hubble_H0_err = 2.7
+Hubble_name = H073p9
 DEFAULT(HST.ini)
 
