--- a/test.ini
+++ b/test.ini
@@ -1,6 +1,6 @@
 #DEFAULT(batch2/nonclik.ini)
-DEFAULT(batch2/CAMspec_defaults.ini)
-DEFAULT(batch2/lowl.ini)
+#DEFAULT(batch2/CAMspec_defaults.ini)
+#DEFAULT(batch2/lowl.ini)
 DEFAULT(batch2/lowLike.ini)
 
 #cmb_dataset[BICEP2]=data/BICEP/BICEP2.dataset
@@ -32,10 +32,9 @@ root_dir = chains/
 
 #Root name for files produced
 file_root=test
-#Planck_RSD_r1
 #action= 0 runs chains, 1 importance samples, 2 minimizes
 #use action=4 just to quickly test likelihoods
-action = 4
+action = 0
 
 checkpoint = F
 
