added calPlanck global parameter; changes to batch2/*.ini files for new settings; slightly tidies and generalizations in temp_like and cliklike_CamSpec

--- a/batch2/CAMspec_EE.ini
+++ b/batch2/CAMspec_EE.ini
@@ -1,9 +1,8 @@
-DEFAULT(CAMspec_TE.ini)
+DEFAULT(CAMspec_defaults.ini)
 clik_data_camspec = %DATASETDIR%clik/CAMspec_v9.7F_2014_07_09_EE.clik
 
-param[calTE] = 1
-param[calEE] = 1
-
+param[calEE] = 1 0 2 0.005 0.005
+prior[calEE] = 1 0.01
 
 #for use without clik
 want_spec = F F F F F T
