--- a/batch2/CAMspec_TE.ini
+++ b/batch2/CAMspec_TE.ini
@@ -1,32 +1,8 @@
 DEFAULT(CAMspec_defaults.ini)
 clik_data_camspec = %DATASETDIR%clik/CAMspec_v9.7F_2014_07_09_TE.clik
 
-param[aps100] = 0
-param[aps143]= 0
-param[aps217]= 0
-param[acib143]= 0
-param[acib217]= 0 
-param[asz143]= 0
-param[psr]= 0
-param[cibr]= 0
-param[ncib] =0 
-param[cal0]= 1
-param[cal1]= 1
-param[cal2]= 1
-param[xi] =0
-param[aksz] = 0
-
-param[bm_1_1] = 0
-
-#should take this out if allow calTE to float in TE-only
-param[calTE] = 1
-param[calEE] = 1
-prior[calTE]=
-prior[calEE]=
-
-prior[cal0]= 
-prior[cal2]= 
-prior[ncib]= 
+param[calTE] = 1 0 2 0.005 0.005
+prior[calTE] = 1 0.01
 
 #for use without clik
 want_spec = F F F F T F
