--- a/batch2/CAMspec_TTTEEE.ini
+++ b/batch2/CAMspec_TTTEEE.ini
@@ -1,4 +1,9 @@
-DEFAULT(CAMspec_defaults.ini)
+DEFAULT(CAMspec_TT.ini)
+
+param[calTE] = 1 0 2 0.005 0.005
+prior[calTE] = 1 0.01
+param[calEE] = 1 0 2 0.005 0.005
+prior[calEE] = 1 0.01
 
 #clik likelihood file, when compiling with cliklike
 clik_data_camspec = %DATASETDIR%clik/CAMspec_v9.7F_2014_07_09_TTTEEE.clik
