--- a/batch2/CAMspec_defaults.ini
+++ b/batch2/CAMspec_defaults.ini
@@ -1,45 +1,38 @@
 use_clik = T
 
-clik_params_camspec = %DATASETDIR%camspec_clik9.paramnames
 clik_speed_camspec = 5
+clik_params_camspec = %DATASETDIR%camspec_clik9.paramnames
 
+#All parameters fixed here, except total calibration which is always varied
 
-#this contains most of the standard parameters so can be used with various different runs (but in practice is often not invertible)
-#lots of full covmats are provided in planck_covmats
-propose_matrix = planck_CAMspec_merged.covmat
-
-#CAMspec nuisance parameters
-
-param[aps100] = 153 0 360 27 27
-param[aps143]= 54.9 0 270 4.5 4.5
-param[aps217]= 55.8 0 450 7.2 7.2
-param[acib143]= 4 0 20 3 3
-param[acib217]= 55.5 0 80 3 3 
-param[asz143]= 4 0 10 1 1
-param[psr]= 0.91 0.0 1.0 0.04 0.04
-param[cibr]= 0.63 0.0 1.0 0.05 0.05
-param[ncib] = 0.6 -2 2 0.05 0.05
-param[cal0]= 1 0.95 1.05  0.0004 0.0004
+param[aps100] = 0
+param[aps143]= 0
+param[aps217]= 0
+#acib143=-1 here means to fix 143 amplitude from 217
+param[acib143]=  -1
+param[acib217]= 0 
+param[asz143]= 0
+param[psr]= 0
+param[cibr]= 1
+param[ncib] =0 
+param[cal0]= 1
 param[cal1]= 1
-param[cal2]= 1 0.95 1.05 0.001 0.001
-param[xi] = 0.1 0 1 .2 .2
-param[aksz] = 1 0 10 .7 0.7
+param[cal2]= 1
+param[xi] =0
+param[aksz] = 0
 
-param[bm_1_1] = 0 -10 10 0.3 0.3
-#other beams modes are marginalized analytically internally
+param[calTE] = 1
+param[calEE] = 1
+param[calPlanck]=1 
+
+param[dust100] = 1
+param[dust143] = 1
+param[dust217] = 1
+param[dust143x217] = 1
 
 
-prior[ncib] = 0.7 0.2
 param[ncib143] = -10
 param[cibrun]= 0
-
-param[calTE] = 1 0 2 0.005 0.005
-param[calEE] = 1 0 2 0.005 0.005
-prior[calTE] = 1 0.01
-prior[calEE] = 1 0.01
-
-prior[cal0]= 1.0 0.001
-prior[cal2]= 0.991 0.003
 
 param[wig1_143] = 0
 param[wig1_217] = 0
@@ -52,6 +45,7 @@ param[wig2_r] = 0
 param[wig2_L] = 1810
 param[wig2_sigma] = 30
 
+param[bm_1_1]=0 
 param[bm_1_2]=0
 param[bm_1_3]=0
 param[bm_1_4]=0
@@ -71,4 +65,5 @@ param[bm_4_2]=0
 param[bm_4_3]=0
 param[bm_4_4]=0
 param[bm_4_5]=0
+
 
