--- a/batch2/CAMspec_TT.ini
+++ b/batch2/CAMspec_TT.ini
@@ -2,11 +2,36 @@ DEFAULT(CAMspec_defaults.ini)
 
 clik_data_camspec = %DATASETDIR%clik/CAMspec_v9.7F_2014_07_09_TT.clik
 
-param[calTE] = 1
-param[calEE] = 1
+param[aps100] = 153 0 360 27 27
+param[aps143]= 54.9 0 270 4.5 4.5
+param[aps217]= 55.8 0 450 7.2  7.2
+param[acib217]= 55.5 0 80 3 3
+param[asz143]= 4 0 10 1 1
+param[psr]= 0.91 0.0 1.0 0.04 0.04
+param[cal0]= 1 0.95 1.05  0.0004 0.0004
+param[cal2]= 1 0.95 1.05 0.001 0.001
+param[xi] = 0.1 0 1 .2 .2
+param[aksz] = 1 0 10 .7 0.7
 
-prior[calTE]=
-prior[calEE]=
+apply_tight_sz_prior = T
+
+param[dust100] = 1 0 3 .1 .1
+param[dust143] = 1 0 3 .1 .1
+param[dust217] = 1 0 3 .1 .1
+param[dust143x217] = 1 0 3 .1 .1
+prior[dust100] = 1 .2
+prior[dust143] = 1 .2
+prior[dust217] = 1 .2
+prior[dust143x217] = 1 .2
+
+prior[cal0]= 0.997 0.006
+prior[cal2]= 0.995 0.005
+
+param[calPlanck]=1 0.9 1.1 0.005 0.005
+prior[calPlanck]=1 0.005
+
+param[bm_1_1] = 0 -10 10 0.3 0.3
+#other beams modes are marginalized analytically internally
 
 #for use without clik
 want_spec = T T T T F F
