--- a/batch2/WL.ini
+++ b/batch2/WL.ini
@@ -17,9 +17,9 @@ halofit_version = 4
 
 #filenames for WL data sets
 wl_numdatasets = 1
-wl_dataset1 = data/CFHTLENS_1bin.dataset
+#wl_dataset1 = data/CFHTLENS_1bin.dataset
 #wl_dataset1 = data/CFHTLENS_6bin.dataset
 #wl_dataset1 = data/CFHTLENS_1bin_conservative.dataset
 #wl_dataset1 = data/CFHTLENS_6bin_conservative.dataset 
-#wl_dataset1 = data/CFHTLENS_1bin_ultra_conservative.dataset                   
+wl_dataset1 = data/CFHTLENS_1bin_ultra_conservative.dataset                   
 #wl_dataset1 = data/CFHTLENS_6bin_ultra_conservative.dataset
