refactored BAO module, new dataset syntax; 6DF BAO now uses rs/Dv

--- a/batch1/BAO.ini
+++ b/batch1/BAO.ini
@@ -4,8 +4,7 @@ redo_add=T
 redo_likeoffset = 0
 
 #filenames for BAO data sets
-bao_numdatasets = 3
-bao_dataset1 = data/sdss_DR9_bao.dataset
-bao_dataset2 = data/sdss_DR7_bao.dataset
-bao_dataset3 = data/sdss_6DF_bao.dataset
-bao_dataset4 = data/wigglez_bao.dataset
+DEFAULT(BAODR11.ini)
+bao_dataset[6DF] = data/sdss_6DF_bao.dataset
+
+## bao_dataset[WIGGLEZ] = data/wigglez_bao.dataset
