changes for fsigma8 RSD likelihoods

--- a/batch2/BAO.ini
+++ b/batch2/BAO.ini
@@ -1,4 +1,5 @@
 #filenames for BAO data sets
-DEFAULT(BAODR11.ini)
-bao_numdatasets = 3
-bao_dataset3 = data/sdss_MGS_bao.dataset
+INCLUDE(BAODR11.ini)
+bao_dataset[MGS] = data/sdss_MGS_bao.dataset
+bao_dataset[6DF] = data/sdss_6DF_bao.dataset
+
