--- a/batch2/BAO_RSD.ini
+++ b/batch2/BAO_RSD.ini
@@ -4,6 +4,7 @@ redo_add=T
 redo_likeoffset = 0
 
 #filenames for BAO data sets
-bao_numdatasets = 1
-bao_dataset1 = data/sdss_DR11CMASS_RSD_bao_Beutler.dataset
-#bao_dataset1 = data/sdss_DR11CMASS_RSD_bao_Samushia.dataset
+bao_dataset[DR11CMASS_RSD_Beutler] = data/sdss_DR11CMASS_RSD_bao_Beutler.dataset
+
+#bao_dataset[DR11CMASS_RSD_Samushia] = data/sdss_DR11CMASS_RSD_bao_Samushia.dataset
+
