--- a/batch2/BAODR11.ini
+++ b/batch2/BAODR11.ini
@@ -4,7 +4,6 @@ redo_add=T
 redo_likeoffset = 0
 
 #filenames for BAO data sets
-bao_numdatasets = 2
-#http://arxiv.org/abs/1312.4877
-bao_dataset1 = data/sdss_DR11CMASS_bao.dataset
-bao_dataset2 = data/sdss_DR11LOWZ_bao.dataset
+
+bao_dataset[DR11CMASS] = data/sdss_DR11CMASS_bao.dataset
+bao_dataset[DR11LOWZ] = data/sdss_DR11LOWZ_bao.dataset
