--- a/test.ini
+++ b/test.ini
@@ -3,9 +3,10 @@ DEFAULT(batch2/CAMspec_defaults.ini)
 DEFAULT(batch2/lowTEB.ini)
 #DEFAULT(batch2/lowLike.ini)
 
+
 #cmb_dataset[BICEP2]=data/BICEP/BICEP2.dataset
-#for r>0 also need this:
-#compute_tensors = T
+#for r>0 also need compute_tensors=T:
+compute_tensors = F
 
 #planck lensing
 #DEFAULT(batch2/lensing.ini)
@@ -15,7 +16,6 @@ DEFAULT(batch2/lowTEB.ini)
 #DEFAULT(batch2/HST.ini)
 #DEFAULT(batch2/WiggleZ_MPK.ini)
 #DEFAULT(batch2/MPK.ini)
-DEFAULT(batch2/BAO_RSD.ini)
 
 #general settings
 DEFAULT(batch2/common.ini)
@@ -32,11 +32,7 @@ root_dir = chains/
 file_root=test
 #action= 0 runs chains, 1 importance samples, 2 minimizes
 #use action=4 just to quickly test likelihoods
-action = 0
-
-checkpoint = F
-
-num_threads = 4
+action = 4
 
 #if you want to get theory cl for test point
 #test_output_root = output_cl_root
