--- a/batch2/WL_test_3D.ini
+++ b/batch2/WL_test_3D.ini
@@ -1,7 +1,7 @@
 use_WL = T
 
 cut_theta = T
-use_non_linear = F
+use_non_linear = T
 use_weyl = T
 
 nz_wl = 150
@@ -17,9 +17,10 @@ halofit_version = 4
 
 #filenames for WL data sets
 wl_numdatasets = 1
+wl_dataset1 = data/CFHTLENS_6bin_test.dataset
 #wl_dataset1 = data/CFHTLENS_1bin.dataset
 #wl_dataset1 = data/CFHTLENS_6bin.dataset
-wl_dataset1 = data/CFHTLENS_1bin_conservative.dataset
+#wl_dataset1 = data/CFHTLENS_1bin_conservative.dataset
 #wl_dataset1 = data/CFHTLENS_6bin_conservative.dataset 
 #wl_dataset1 = data/CFHTLENS_1bin_ultra_conservative.dataset                   
 #wl_dataset1 = data/CFHTLENS_6bin_ultra_conservative.dataset
