--- a/batch2/WL.ini
+++ b/batch2/WL.ini
@@ -1,7 +1,7 @@
 use_WL = T
 
 cut_theta = T
-use_non_linear = F
+use_non_linear = T
 use_weyl = T
 
 nz_wl = 150
@@ -13,7 +13,7 @@ redo_likeoffset = 0
 
 #Which version of Halofit approximation to use (default currently Takahashi):
 #1. original, 2. Bird et al. update, 3. (1) plus fudge from http://www.roe.ac.uk/~jap/haloes/, 4. Takahashi
-halofit_version = 4
+halofit_version = 1
 
 #filenames for WL data sets
 wl_numdatasets = 1
