refactoring of WL

--- a/batch2/WL.ini
+++ b/batch2/WL.ini
@@ -1,11 +1,7 @@
 use_WL = T
 
-cut_theta = T
-use_non_linear = T
-use_weyl = T
-
-nz_wl = 150
-max_z = 10.0
+wl_use_non_linear = T
+wl_use_weyl = T
 
 redo_no_new_data = T
 redo_add = T
@@ -13,13 +9,13 @@ redo_likeoffset = 0
 
 #Which version of Halofit approximation to use (default currently Takahashi):
 #1. original, 2. Bird et al. update, 3. (1) plus fudge from http://www.roe.ac.uk/~jap/haloes/, 4. Takahashi
-halofit_version = 4
+#halofit_version = 4
 
 #filenames for WL data sets
-wl_numdatasets = 1
-#wl_dataset1 = data/CFHTLENS_1bin.dataset
-#wl_dataset1 = data/CFHTLENS_6bin.dataset
-#wl_dataset1 = data/CFHTLENS_1bin_conservative.dataset
-#wl_dataset1 = data/CFHTLENS_6bin_conservative.dataset 
-wl_dataset1 = data/CFHTLENS_1bin_ultra_conservative.dataset                   
-#wl_dataset1 = data/CFHTLENS_6bin_ultra_conservative.dataset
+#wl_dataset[CFHTLENS] = data/CFHTLENS_1bin.dataset
+#wl_dataset[CFHTLENS] =  data/CFHTLENS_6bin.dataset
+#wl_dataset[CFHTLENS] =  data/CFHTLENS_1bin_conservative.dataset
+#wl_dataset[CFHTLENS] =  data/CFHTLENS_6bin_conservative.dataset
+wl_dataset[CFHTLENS] = data/CFHTLENS_1bin_ultra_conservative.dataset    
+#wl_dataset[CFHTLENS] = data/CFHTLENS_6bin_ultra_conservative.dataset
+
