2bin plus Simpson

--- a/batch2/WL.ini
+++ b/batch2/WL.ini
@@ -16,6 +16,7 @@ redo_likeoffset = 0
 #wl_dataset[CFHTLENS] =  data/CFHTLENS_6bin.dataset
 #wl_dataset[CFHTLENS] =  data/CFHTLENS_1bin_conservative.dataset
 #wl_dataset[CFHTLENS] =  data/CFHTLENS_6bin_conservative.dataset
-wl_dataset[CFHTLENS] = data/CFHTLENS_1bin_ultra_conservative.dataset    
+#wl_dataset[CFHTLENS] = data/CFHTLENS_1bin_ultra_conservative.dataset    
 #wl_dataset[CFHTLENS] = data/CFHTLENS_6bin_ultra_conservative.dataset
-
+#wl_dataset[CFHTLENS] = data/CFHTLENS_2bin.dataset
+wl_dataset[CFHTLENS] = data/CFHTLENS_2bin_Simpson.dataset
