--- a/batch2/getdist_common.ini
+++ b/batch2/getdist_common.ini
@@ -135,6 +135,8 @@ limits[ctlamp] = 0 N
 limits[BAO]=0 N
 limits[HST]=0 N
 limits[DR11LOWZ]=0 N
+limits[6DF]=0 N
+limits[MGS]=0 N
 
 #all_limits sets all limitsxx for all variables to the same; can be useful for bins
 all_limits = 
