settings for new nonclik

--- a/batch2/CAMspec_TT.ini
+++ b/batch2/CAMspec_TT.ini
@@ -13,8 +13,6 @@ param[cal2]= 1 0.95 1.05 0.001 0.001
 param[xi] = 0.1 0 1 .2 .2
 param[aksz] = 1 0 10 .7 0.7
 
-apply_tight_sz_prior = T
-
 param[dust100] = 1 0 3 .1 .1
 param[dust143] = 1 0 3 .1 .1
 param[dust217] = 1 0 3 .1 .1
@@ -24,11 +22,10 @@ prior[dust143] = 1 .2
 prior[dust217] = 1 .2
 prior[dust143x217] = 1 .2
 
-prior[cal0]= 0.997 0.006
-prior[cal2]= 0.995 0.005
-
-param[calPlanck]=1 0.9 1.1 0.005 0.005
-prior[calPlanck]=1 0.005
+#prior[cal0]= 0.997 0.006
+#prior[cal2]= 0.995 0.005
+prior[cal0]= 1.000 0.001
+prior[cal2]= 0.995 0.004
 
 param[bm_1_1] = 0 -10 10 0.3 0.3
 #other beams modes are marginalized analytically internally
