--- a/batch2/CAMspec_defaults.ini
+++ b/batch2/CAMspec_defaults.ini
@@ -3,6 +3,17 @@ use_clik = T
 clik_speed_camspec = 5
 clik_params_camspec = %DATASETDIR%camspec_clik9.paramnames
 
+#Tight prior on SZ amplitudes
+
+linear_combination[SZComb] = aksz asz143
+linear_combination_weights[SZComb] = 1 1.6
+prior[SZComb] = 9.5 3
+
+#always vary total calibration
+
+param[calPlanck]=1 0.9 1.1 0.005 0.005
+prior[calPlanck]=1 0.0025
+
 #All parameters fixed here, except total calibration which is always varied
 
 param[aps100] = 0
