comment write; updated default beam file

--- a/batch2/nonclik.ini
+++ b/batch2/nonclik.ini
@@ -5,7 +5,8 @@ clik_data_camspec =
 
 #likefile = %DATASETDIR%camspec/like_v9.10CMH
 likefile = %DATASETDIR%camspec/like_v9.10CMH_unified
-beamfile = %DATASETDIR%camspec/beamfile_v9.10.dat
+beamfile = %DATASETDIR%camspec/beamfilev9.10CMH.dat 
+
 
 dust100file=%DATASETDIR%camspec/100x100_dustv9.10.dat 
 dust143file=%DATASETDIR%camspec/143x143_dustv9.10.dat 
