camspec clik setting update

--- a/batch2/CAMspec_TT.ini
+++ b/batch2/CAMspec_TT.ini
@@ -1,6 +1,6 @@
 DEFAULT(CAMspec_defaults.ini)
 
-clik_data_camspec = %DATASETDIR%clik/CAMspec_v9.7F_2014_07_09_TT.clik
+clik_data_camspec = %DATASETDIR%clik/CAMspec_v9.10CMH_2014_10_03_TT.clik
 
 param[aps100] = 153 0 360 27 27
 param[aps143]= 54.9 0 270 4.5 4.5
