--- a/batch2/CAMspec_EE.ini
+++ b/batch2/CAMspec_EE.ini
@@ -1,5 +1,5 @@
 DEFAULT(CAMspec_defaults.ini)
-clik_data_camspec = %DATASETDIR%clik/CAMspec_v9.7F_2014_07_09_EE.clik
+clik_data_camspec = %DATASETDIR%clik/CAMspec_v9.10CMH_2014_10_03_EE.clik
 
 param[calEE] = 1 0 2 0.005 0.005
 prior[calEE] = 1 0.01
