update lowl and lowTEB assuming cut at L=30

--- a/batch2/lowl.ini
+++ b/batch2/lowl.ini
@@ -1,6 +1,6 @@
 #clik likelihood file, when compiling with cliklike
 
 use_clik = T
-clik_data_commanderTT = %DATASETDIR%clik/Commander_dr2_v0.1_l_2_to_49.clik
+clik_data_commanderTT = %DATASETDIR%clik/commander_rc2_v1.1_l2_29_Ap.clik
 clik_speed_commanderTT = 0
 
