--- a/test.ini
+++ b/test.ini
@@ -1,24 +1,24 @@
-#DEFAULT(batch2/nonclik_v97F.ini)
-DEFAULT(batch2/CAMspec_defaults.ini)
+#DEFAULT(batch2/nonclik.ini)
+DEFAULT(batch2/CAMspec_TT.ini)
 DEFAULT(batch2/lowTEB.ini)
-#DEFAULT(batch2/lowLike.ini)
+#DEFAULT(batch2/lowl.ini)
 
+#planck lensing
+DEFAULT(batch2/lensing.ini)
+
+#Other Likelihoods
+DEFAULT(batch2/BAO.ini)
+#DEFAULT(batch2/HST.ini)
+#DEFAULT(batch2/WiggleZ_MPK.ini)
+#DEFAULT(batch2/MPK.ini)
+#DEFAULT(batch2/WL.ini)
+
+#general settings
+DEFAULT(batch2/common.ini)
 
 #cmb_dataset[BICEP2]=data/BICEP/BICEP2.dataset
 #for r>0 also need compute_tensors=T:
 compute_tensors = F
-
-#planck lensing
-#DEFAULT(batch2/lensing.ini)
-
-#Other Likelihoods
-#DEFAULT(batch2/BAO.ini)
-#DEFAULT(batch2/HST.ini)
-#DEFAULT(batch2/WiggleZ_MPK.ini)
-#DEFAULT(batch2/MPK.ini)
-
-#general settings
-DEFAULT(batch2/common.ini)
 
 #high for new runs
 MPI_Max_R_ProposeUpdate = 30
@@ -34,12 +34,16 @@ file_root=test
 #use action=4 just to quickly test likelihoods
 action = 4
 
+num_threads = 0
+
 #if you want to get theory cl for test point
 #test_output_root = output_cl_root
 
 start_at_bestfit =F
 feedback=1
 use_fast_slow = T
+
+checkpoint = F
 
 #sampling_method=7 is a new fast-slow scheme good for Planck
 sampling_method = 7
@@ -62,5 +66,3 @@ get_sigma8=T
 #cosmology_calculator=PICO
 #pico_datafile = pico3_tailmonty_v34.dat
 #pico_verbose=F
-
-
