remove block_semi_fast=F from lensing.ini (tested OK)

--- a/batch2/lensing.ini
+++ b/batch2/lensing.ini
@@ -4,9 +4,7 @@ cmb_dataset_speed[PLENS] =-1
 
 use_nonlinear_lensing = T
 
-#currently non-linear lensing does not correctly go from transfer functions
-#this should ensure transfer functions are re-computed whenever the power spectrum parameters change 
-block_semi_fast = F
+##block_semi_fast = F
 
 redo_theory = T
 redo_cls = T
