new paths for clik 10.1 camspec and lowl/lowTEB

--- a/batch2/CAMspec_TE.ini
+++ b/batch2/CAMspec_TE.ini
@@ -1,5 +1,5 @@
 DEFAULT(CAMspec_defaults.ini)
-clik_data_camspec = %DATASETDIR%clik/CAMspec_v9.10CMH_2014_10_03_TE.clik
+clik_data_camspec = %DATASETDIR%clik/hi_l/camspec/CAMspec_v9.10CMH_2014_10_03_TE.clik
 
 param[calTE] = 1 0 2 0.005 0.005
 prior[calTE] = 1 0.01
