--- a/batch2/CAMspec_DS_EE.ini
+++ b/batch2/CAMspec_DS_EE.ini
@@ -1,3 +1,3 @@
 DEFAULT(CAMspec_EE.ini)
-clik_data_camspec = %DATASETDIR%clik/CAMspec_v9.10F_2014_10_03_EE.clik
+clik_data_camspec = %DATASETDIR%clik/hi_l/camspec/CAMspec_v9.10F_2014_10_03_EE.clik
 
