--- a/batch2/CAMspec_DS_TTTEEE.ini
+++ b/batch2/CAMspec_DS_TTTEEE.ini
@@ -1,3 +1,3 @@
 DEFAULT(CAMspec_TTTEEE.ini)
-clik_data_camspec = %DATASETDIR%clik/CAMspec_v9.10CMH_2014_10_03_TTTEEE.clik
+clik_data_camspec = %DATASETDIR%clik/hi_l/camspec/CAMspec_v9.10CMH_2014_10_03_TTTEEE.clik
 
