--- a/batch2/CAMspec_TTTEEE.ini
+++ b/batch2/CAMspec_TTTEEE.ini
@@ -6,7 +6,7 @@ param[calEE] = 1 0 2 0.005 0.005
 prior[calEE] = 1 0.01
 
 #clik likelihood file, when compiling with cliklike
-clik_data_camspec = %DATASETDIR%clik/CAMspec_v9.10CMH_2014_10_03_TTTEEE.clik
+clik_data_camspec = %DATASETDIR%clik/hi_l/camspec/CAMspec_v9.10CMH_2014_10_03_TTTEEE.clik
 
 #for use without clik
 want_spec = T T T T T T
